Add /services endpoint to display information about all services
